fix: support file type sets on older Android